--- a/print.css
+++ b/print.css
@@ -21,7 +21,7 @@ html {
 } */
 
 header {
-  padding-top: 0;
+  padding-top: 20px;
   padding-bottom: 10px;
   background-color: transparent;
 }
